--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -7,7 +7,7 @@
           %ul.imain__main__link__image__ulist
             %li
               = link_to "" do
-                = image_tag "https://media.gettyimages.com/photos/harry-styles-episode-1773-pictured-host-harry-styles-as-copilot-and-picture-id1182989392?s=2048x2048",class: "imain__main__link__image__ulist__gazo",id: "gazo1"
+                = image_tag "6cbf10cdf0a7a15ce0c0615f66a499bb_m.jpg",class: "imain__main__link__image__ulist__gazo",id: "gazo1"
             %li
               = link_to "" do
                 = image_tag "https://mail.google.com/mail/u/0?ui=2&ik=33ce5707ad&attid=0.1&permmsgid=msg-f:1653688456250162859&th=16f314e3abf47eab&view=fimg&sz=s0-l75-ft&attbid=ANGjdJ_gcfNksvXJz7L0FKeATDoH-563flltkXmkRymdoqxwBaSRoNXiD7egaE2W0SaNY0hd4sPyApwn-Hib0wjklCwcX-_iaBe3M2GSUSIn1Mg4HO7elw70AgPl0SQ&disp=emb&realattid=16f314d8a1f49b7262f1",class: "imain__main__link__image__ulist__gazo",id: "gazo1"
@@ -59,7 +59,7 @@
                       %label.imain__main__product__box__item__list__data__size__link__figure__information__label
                         ¥
                         9,799
-                      = image_tag "https://media.gettyimages.com/photos/houston-astros-second-baseman-jose-altuve-watches-the-pitch-during-picture-id1169917922?s=2048x2048", class: "imain__main__product__box__item__list__data__size__link__figure__information__image"
+                      = image_tag "37efefdc5861611849e8a26e53bedb8f_m.jpg", class: "imain__main__product__box__item__list__data__size__link__figure__information__image"
 
     .imain__main__product
       .imain__main__product__box
@@ -80,7 +80,7 @@
                       %label.imain__main__product__box__item__list__data__size__link__figure__information__label
                         ¥
                         9,799
-                      = image_tag "https://media.gettyimages.com/photos/houston-astros-second-baseman-jose-altuve-watches-the-pitch-during-picture-id1169917922?s=2048x2048", class: "imain__main__product__box__item__list__data__size__link__figure__information__image"
+                      = image_tag "37efefdc5861611849e8a26e53bedb8f_m.jpg", class: "imain__main__product__box__item__list__data__size__link__figure__information__image"
 
     .imain__main__product
       .imain__main__product__box
@@ -101,7 +101,7 @@
                       %label.imain__main__product__box__item__list__data__size__link__figure__information__label
                         ¥
                         9,799
-                      = image_tag "https://media.gettyimages.com/photos/houston-astros-second-baseman-jose-altuve-watches-the-pitch-during-picture-id1169917922?s=2048x2048", class: "imain__main__product__box__item__list__data__size__link__figure__information__image"
+                      = image_tag "37efefdc5861611849e8a26e53bedb8f_m.jpg", class: "imain__main__product__box__item__list__data__size__link__figure__information__image"
 
     .imain__main__product
       .imain__main__product__box
@@ -122,7 +122,7 @@
                       %label.imain__main__product__box__item__list__data__size__link__figure__information__label
                         ¥
                         9,799
-                      = image_tag "https://media.gettyimages.com/photos/houston-astros-second-baseman-jose-altuve-watches-the-pitch-during-picture-id1169917922?s=2048x2048", class: "imain__main__product__box__item__list__data__size__link__figure__information__image"
+                      = image_tag "37efefdc5861611849e8a26e53bedb8f_m.jpg", class: "imain__main__product__box__item__list__data__size__link__figure__information__image"
 
     .imain__main__product
       .imain__main__product__box
@@ -143,7 +143,7 @@
                       %label.imain__main__product__box__item__list__data__size__link__figure__information__label
                         ¥
                         9,799
-                      = image_tag "https://media.gettyimages.com/photos/houston-astros-second-baseman-jose-altuve-watches-the-pitch-during-picture-id1169917922?s=2048x2048", class: "imain__main__product__box__item__list__data__size__link__figure__information__image"
+                      = image_tag "37efefdc5861611849e8a26e53bedb8f_m.jpg", class: "imain__main__product__box__item__list__data__size__link__figure__information__image"
 
     .imain__main__product
       .imain__main__product__box
@@ -164,7 +164,7 @@
                       %label.imain__main__product__box__item__list__data__size__link__figure__information__label
                         ¥
                         9,799
-                      = image_tag "https://media.gettyimages.com/photos/houston-astros-second-baseman-jose-altuve-watches-the-pitch-during-picture-id1169917922?s=2048x2048", class: "imain__main__product__box__item__list__data__size__link__figure__information__image"
+                      = image_tag "37efefdc5861611849e8a26e53bedb8f_m.jpg", class: "imain__main__product__box__item__list__data__size__link__figure__information__image"
 
     .imain__main__product
       .imain__main__product__box
@@ -185,7 +185,7 @@
                       %label.imain__main__product__box__item__list__data__size__link__figure__information__label
                         ¥
                         9,799
-                      = image_tag "https://media.gettyimages.com/photos/houston-astros-second-baseman-jose-altuve-watches-the-pitch-during-picture-id1169917922?s=2048x2048", class: "imain__main__product__box__item__list__data__size__link__figure__information__image"
+                      = image_tag "37efefdc5861611849e8a26e53bedb8f_m.jpg", class: "imain__main__product__box__item__list__data__size__link__figure__information__image"
 
     .imain__main__product
       .imain__main__product__box
@@ -206,7 +206,7 @@
                       %label.imain__main__product__box__item__list__data__size__link__figure__information__label
                         ¥
                         9,799
-                      = image_tag "https://media.gettyimages.com/photos/houston-astros-second-baseman-jose-altuve-watches-the-pitch-during-picture-id1169917922?s=2048x2048", class: "imain__main__product__box__item__list__data__size__link__figure__information__image"
+                      = image_tag "37efefdc5861611849e8a26e53bedb8f_m.jpg", class: "imain__main__product__box__item__list__data__size__link__figure__information__image"
 
 .banner
   = render "banner"
