--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -1008,3 +1008,19 @@
       }
     }
 }
+.fas.fa-search{
+  font-size: 18px;
+}
+.icon-text__left{
+  display: inline;
+  color: black;
+  font-family: Arial, 游ゴシック体, YuGothic, メイリオ, Meiryo, sans-serif;
+  // &:hover + .mheader__main__bottom__left__bland__inside__submenu{
+  //   display: block;
+  // }
+}
+.icon-text__right{
+  display: inline;
+  color: black;
+  font-weight: 400;
+}
