--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,9 @@
 @import "reset";
+@import "variables";
 @import "slick";
 @import "slick-theme";
-@import "variables";
+@import "footer";
+@import "header";
 @import "index";
 @import "banner";
 @import "show";
