--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -1,3 +1,5 @@
+.header
+  = render "header"
 .main
   .imain
     .imain__main
@@ -210,3 +212,5 @@
 
 .banner
   = render "banner"
+.footer
+  = render "footer"
