--- a/app/assets/stylesheets/_footer.scss
+++ b/app/assets/stylesheets/_footer.scss
@@ -165,3 +165,22 @@
     }
   }
 }
+.fab.fa-twitter{
+  max-width: 100%;
+  height: 28px;
+  max-height: 100%;
+  width: 30px;
+  margin-right: 20px;
+  color: white;
+  font-size: 25px;
+}
+.fab.fa-facebook-square{
+  display: inline;
+  font-style: normal;
+  font-variant: normal;
+  text-rendering: auto;
+  line-height: 1;
+  padding: 5px;
+  color: white;
+  font-size: 25px;
+}
