--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -1,6 +1,6 @@
 .exhibitcontent
   .exhibitcontent_logo
-    = link_to image_tag('',size:"185x49",class:"exhibitcontent_logo__image"), '#'
+    = link_to image_tag('fmarket_logo_red.svg',size:"185x49",class:"exhibitcontent_logo__image"), '#'
   .exhibitcontent_main
     .exhibitcontent_main__title
       商品の情報を入力
@@ -125,6 +125,6 @@
       = link_to "Fmarket利用規約","#",class: 'exhibitcontent_down__terms--center'
       = link_to "特定商取引に関する表記","#",class: 'exhibitcontent_down__terms--right'
     .exhibitcontent_down__middle
-      = link_to image_tag('',size:"80x65",class:"exhibitcontent_down__middle--image"), '#'
+      = link_to image_tag('logo_gray.svg',size:"80x65",class:"exhibitcontent_down__middle--image"), '#'
     .exhibitcontent_down__bottom
       @Fmarket,lnc.
