--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -120,6 +120,7 @@
                 padding: 4px;
                 border-radius: 15px;
                 background-color: rgb(239, 239, 239);
+                color:black
               }
               &__b{
                 display: none;
