--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -34,14 +34,14 @@
       .imain__main__content__menu
         %ul.imain__main__content__menu__list
           %li.imain__main__content__menu__list__category
-            %a.imain__main__content__menu__list__category__a レディース
-            %a.imain__main__content__menu__list__category__b レディース
-            %a.imain__main__content__menu__list__category__a メンズ
-            %a.imain__main__content__menu__list__category__b メンズ
-            %a.imain__main__content__menu__list__category__a 家電・スマホ・カメラ
-            %a.imain__main__content__menu__list__category__b 家電・スマホ・カメラ
-            %a.imain__main__content__menu__list__category__a おもちゃ・ホビー・グッズ
-            %a.imain__main__content__menu__list__category__b おもちゃ・ホビー・グッズ
+            =link_to"レディース","",class:"imain__main__content__menu__list__category__a" 
+            =link_to"レディース","",class:"imain__main__content__menu__list__category__b" 
+            =link_to"メンズ","",class:"imain__main__content__menu__list__category__a" 
+            =link_to"メンズ","",class:"imain__main__content__menu__list__category__b" 
+            =link_to"家電・スマホ・カメラ","",class:"imain__main__content__menu__list__category__a"  
+            =link_to"家電・スマホ・カメラ","",class:"imain__main__content__menu__list__category__b" 
+            =link_to"おもちゃ・ホビー・グッズ","",class:"imain__main__content__menu__list__category__a"  
+            =link_to"おもちゃ・ホビー・グッズ","",class:"imain__main__content__menu__list__category__b"
     .imain__main__product
       .imain__main__product__box
         .imain__main__product__box__menu
@@ -53,7 +53,8 @@
             -#   - @products.each do |p|
             %li.imain__main__product__box__item__list__data
               .imain__main__product__box__item__list__data__size
-                %a{href:"",class: "imain__main__product__box__item__list__data__size__link"}
+                =link_to "",class: "imain__main__product__box__item__list__data__size__link" do
+                
                   %figure.imain__main__product__box__item__list__data__size__link__figure
                     %figcaption.imain__main__product__box__item__list__data__size__link__figure__figcaption
                       harry_styles
@@ -74,7 +75,7 @@
             -#   - @products.each do |p|
             %li.imain__main__product__box__item__list__data
               .imain__main__product__box__item__list__data__size
-                %a{href:"",class: "imain__main__product__box__item__list__data__size__link"}
+                =link_to "",class: "imain__main__product__box__item__list__data__size__link" do
                   %figure.imain__main__product__box__item__list__data__size__link__figure
                     %figcaption.imain__main__product__box__item__list__data__size__link__figure__figcaption
                       harry_styles
@@ -95,7 +96,7 @@
             -#   - @products.each do |p|
             %li.imain__main__product__box__item__list__data
               .imain__main__product__box__item__list__data__size
-                %a{href:"",class: "imain__main__product__box__item__list__data__size__link"}
+                =link_to "",class: "imain__main__product__box__item__list__data__size__link" do
                   %figure.imain__main__product__box__item__list__data__size__link__figure
                     %figcaption.imain__main__product__box__item__list__data__size__link__figure__figcaption
                       harry_styles
@@ -116,7 +117,7 @@
             -#   - @products.each do |p|
             %li.imain__main__product__box__item__list__data
               .imain__main__product__box__item__list__data__size
-                %a{href:"",class: "imain__main__product__box__item__list__data__size__link"}
+                =link_to "",class: "imain__main__product__box__item__list__data__size__link" do
                   %figure.imain__main__product__box__item__list__data__size__link__figure
                     %figcaption.imain__main__product__box__item__list__data__size__link__figure__figcaption
                       harry_styles
@@ -137,7 +138,7 @@
             -#   - @products.each do |p|
             %li.imain__main__product__box__item__list__data
               .imain__main__product__box__item__list__data__size
-                %a{href:"",class: "imain__main__product__box__item__list__data__size__link"}
+                =link_to "",class: "imain__main__product__box__item__list__data__size__link" do
                   %figure.imain__main__product__box__item__list__data__size__link__figure
                     %figcaption.imain__main__product__box__item__list__data__size__link__figure__figcaption
                       harry_styles
@@ -158,7 +159,7 @@
             -#   - @products.each do |p|
             %li.imain__main__product__box__item__list__data
               .imain__main__product__box__item__list__data__size
-                %a{href:"",class: "imain__main__product__box__item__list__data__size__link"}
+                =link_to "",class: "imain__main__product__box__item__list__data__size__link" do
                   %figure.imain__main__product__box__item__list__data__size__link__figure
                     %figcaption.imain__main__product__box__item__list__data__size__link__figure__figcaption
                       harry_styles
@@ -172,14 +173,14 @@
       .imain__main__product__box
         .imain__main__product__box__menu
           .imain__main__product__box__menu__text アイテム7
-          =link_to "もっと見る ＞", "#", class: "imain__main__product__box__menu__link"
+          =link_to "もっと見る ＞", "#", class: "imain__main__product__box__menu__link" 
         .imain__main__product__box__item
           %ul.imain__main__product__box__item__list
             -# -if @products
             -#   - @products.each do |p|
             %li.imain__main__product__box__item__list__data
               .imain__main__product__box__item__list__data__size
-                %a{href:"",class: "imain__main__product__box__item__list__data__size__link"}
+                =link_to "",class: "imain__main__product__box__item__list__data__size__link" do
                   %figure.imain__main__product__box__item__list__data__size__link__figure
                     %figcaption.imain__main__product__box__item__list__data__size__link__figure__figcaption
                       harry_styles
@@ -200,7 +201,7 @@
             -#   - @products.each do |p|
             %li.imain__main__product__box__item__list__data
               .imain__main__product__box__item__list__data__size
-                %a{href:"",class: "imain__main__product__box__item__list__data__size__link"}
+                =link_to "",class: "imain__main__product__box__item__list__data__size__link" do
                   %figure.imain__main__product__box__item__list__data__size__link__figure
                     %figcaption.imain__main__product__box__item__list__data__size__link__figure__figcaption
                       harry_styles
