--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -8,20 +8,23 @@
         .imain__main__link__image{id: "icon"}
           %ul.imain__main__link__image__ulist
             %li
-              = link_to "" do
-                = image_tag "6cbf10cdf0a7a15ce0c0615f66a499bb_m.jpg",class: "imain__main__link__image__ulist__gazo",id: "gazo1"
+              = image_tag "6cbf10cdf0a7a15ce0c0615f66a499bb_m.jpg",class: "imain__main__link__image__ulist__gazo",id: "gazo1"
             %li
-              = link_to "" do
-                = image_tag "https://mail.google.com/mail/u/0?ui=2&ik=33ce5707ad&attid=0.1&permmsgid=msg-f:1653688456250162859&th=16f314e3abf47eab&view=fimg&sz=s0-l75-ft&attbid=ANGjdJ_gcfNksvXJz7L0FKeATDoH-563flltkXmkRymdoqxwBaSRoNXiD7egaE2W0SaNY0hd4sPyApwn-Hib0wjklCwcX-_iaBe3M2GSUSIn1Mg4HO7elw70AgPl0SQ&disp=emb&realattid=16f314d8a1f49b7262f1",class: "imain__main__link__image__ulist__gazo",id: "gazo1"
-                .imain__main__link__image__ulist__text
-                  .imain__main__link__image__ulist__text__1
-                    スマホで簡単
-                    %br
-                    フリマアプリ
-                  .imain__main__link__image__ulist__text__2
-                    メルカリはスマホカメラからすぐに出品できる
-                    %br
-                    購入時も安心な独自システムのアプリです
+              = image_tag "https://mail.google.com/mail/u/0?ui=2&ik=33ce5707ad&attid=0.1&permmsgid=msg-f:1653688456250162859&th=16f314e3abf47eab&view=fimg&sz=s0-l75-ft&attbid=ANGjdJ_gcfNksvXJz7L0FKeATDoH-563flltkXmkRymdoqxwBaSRoNXiD7egaE2W0SaNY0hd4sPyApwn-Hib0wjklCwcX-_iaBe3M2GSUSIn1Mg4HO7elw70AgPl0SQ&disp=emb&realattid=16f314d8a1f49b7262f1",class: "imain__main__link__image__ulist__gazo",id: "gazo1"
+              .imain__main__link__image__ulist__text
+                .imain__main__link__image__ulist__text__1
+                  スマホで簡単
+                  %br
+                  フリマアプリ
+                .imain__main__link__image__ulist__text__2
+                  メルカリはスマホカメラからすぐに出品できる
+                  %br
+                  購入時も安心な独自システムのアプリです
+                  .imain__main__link__image__ulist__text__2__app
+                    =link_to "#",class: "imain__main__link__image__ulist__text__2__app__image" do
+                      =image_tag"https://web-jp-assets.mercdn.net/_next/static/images/app-store-a5c17948c6fd6d5b60b13d421cd60b35.svg",size: "170x50",class:"imain__main__link__image__ulist__text__2__app__image__appstore1"
+                    =link_to "#",class: "imain__main__link__image__ulist__text__app__image" do
+                      =image_tag"https://web-jp-assets.mercdn.net/_next/static/images/google-play-495575abb895b405aa6336b2a4304958.svg",size: "170x50",class:"imain__main__link__image__ulist__text__2__app__image__appstore2"
           .imain__main__link__image__left 
             .imain__main__link__image__left__a{id: "btn1"}
           .imain__main__link__image__right
