--- a/app/views/products/_footer.html.haml
+++ b/app/views/products/_footer.html.haml
@@ -1,71 +1,94 @@
 .footer
-  .footer__top
-    .footer__top__about
-      %h2.footer__top__about__text フリマについて
-      %ul.footer__top__about__list
-        %li.footer__top__about__list__child
-          = link_to "会社概要", root_path, class:"footer__top__about__list__child__link"
-        %li.footer__top__about__list__child
-          = link_to "採用情報", root_path, class:"footer__top__about__list__child__link"
-        %li.footer__top__about__list__child
-          = link_to "プレリリース", root_path, class:"footer__top__about__list__child__link"
-        %li.footer__top__about__list__child
-          = link_to "公式ブログ", root_path, class:"footer__top__about__list__child__link"
-        %li.footer__top__about__list__child
-          = link_to "フリマロゴ利用ガイドライン", root_path, class:"footer__top__about__list__child__link"
-        = link_to root_path, class:"footer__top__about__list__icon" do
-          %i.fab.fa-twitter
-        = link_to root_path, class:"footer__top__about__list__icon" do
-          %i.fab.fa-facebook-square
-    .footer__top__help
-      %h2.footer__top__help__text ヘルプ＆ガイド
-      %ul.footer__top__help__list
-        %li.footer__top__help__list__child
-          = link_to "フリマガイド", root_path, class:"footer__top__help__list__child__link"
-        %li.footer__top__help__list__child
-          = link_to "らくらくフリマ便", root_path, class:"footer__top__help__list__child__link"
-        %li.footer__top__help__list__child
-          = link_to "ゆうゆうフリマ便", root_path, class:"footer__top__help__list__child__link"
-        %li.footer__top__help__list__child
-          = link_to "大型フリマ便", root_path, class:"footer__top__help__list__child__link"
-        %li.footer__top__help__list__child
-          = link_to "車体取引ガイド", root_path, class:"footer__top__help__list__child__link"
-        %li.footer__top__help__list__child
-          = link_to "フリマあんしん・あんぜん宣言！", root_path, class:"footer__top__help__list__child__link"
-        %li.footer__top__help__list__child
-          = link_to "偽ブランド品撲滅の取り組み", root_path, class:"footer__top__help__list__child__link"
-        %li.footer__top__help__list__child
-          = link_to "フリマボックス", root_path, class:"footer__top__help__list__child__link"
-    .footer__top__privacy
-      %h2.footer__top__privacy__text プライバシーと利用規約
-      .footer__top__privacy__list
-        %ul.footer__top__privacy__list__left
-          %li.footer__top__privacy__list__left__child
-            = link_to "プライバシーポリシー", root_path, class:"footer__top__privacy__list__left__child__link"
-          %li.footer__top__privacy__list__left__child
-            = link_to "フリマ利用規約", root_path, class:"footer__top__privacy__list__left__child__link"
-          %li.footer__top__privacy__list__left__child
-            = link_to "あんしんスマホサポート制度に関する利用規約", root_path, class:"footer__top__privacy__list__left__child__link"
-          %li.footer__top__privacy__list__left__child
-            = link_to "コンプライアンスポリシー", root_path, class:"footer__top__privacy__list__left__child__link"
-        %ul.footer__top__privacy__list__right
-          %li.footer__top__privacy__list__right__child
-            = link_to "個人データの安全管理に係る基本方針", root_path, class:"footer__top__privacy__list__right__child__link"
-          %li.footer__top__privacy__list__right__child
-            = link_to "特定商取引に関する表記", root_path, class:"footer__top__privacy__list__right__child__link"
-          %li.footer__top__privacy__list__right__child
-            = link_to "資金決済法に基づく表示", root_path, class:"footer__top__privacy__list__right__child__link"
-          %li.footer__top__privacy__list__right__child
-            = link_to "法令遵守と犯罪抑止のために", root_path, class:"footer__top__privacy__list__right__child__link"
-    .footer__top__country
-      %h2.footer__top__country__text 国
-      %ul.footer__top__country__list
-        %li.footer__top__country__list__child
-          = link_to "日本", root_path, class:"footer__top__country__list__child__link"
-        %li.footer__top__country__list__child
-          = link_to "United States", root_path, class:"footer__top__country__list__child__link"
-    
-  .footer__bottom
-    = link_to root_path, class:"footer__bottom__a" do
-      = image_tag "https://pro.foto.ne.jp/free/product_info.php/cPath/21_50_115/products_id/2100",size:"124x31",class:"footer__bottom__a__image"
-    %span.footer__bottom__text @ freemarket,inc.
+    .footer__top
+      .footer__top__about
+        %h2.footer__top__about__text フリマについて
+        %ul.footer__top__about__list
+          %li.footer__top__about__list__child
+            %a{href:"",class:"footer__top__about__list__child__link"}
+              会社概要
+          %li.footer__top__about__list__child
+            %a{href:"",class:"footer__top__about__list__child__link"}
+              採用情報
+          %li.footer__top__about__list__child
+            %a{href:"",class:"footer__top__about__list__child__link"}
+              プレスリリース
+          %li.footer__top__about__list__child
+            %a{href:"",class:"footer__top__about__list__child__link"}
+              公式ブログ
+          %li.footer__top__about__list__child
+            %a{href:"",class:"footer__top__about__list__child__link"}
+              フリマロゴ利用ガイドライン
+          %a{href:"",class:"footer__top__about__list__icon"}
+            %i.fab.fa-twitter
+          %a{href:"",class:"footer__top__about__list__icon"}
+            %i.fab.fa-facebook-square
+      .footer__top__help
+        %h2.footer__top__help__text ヘルプ＆ガイド
+        %ul.footer__top__help__list
+          %li.footer__top__help__list__child
+            %a{href:"",class:"footer__top__help__list__child__link"}
+              フリマガイド
+          %li.footer__top__help__list__child
+            %a{href:"",class:"footer__top__help__list__child__link"}
+              らくらくフリマ便
+          %li.footer__top__help__list__child
+            %a{href:"",class:"footer__top__help__list__child__link"}
+              ゆうゆうフリマ便
+          %li.footer__top__help__list__child
+            %a{href:"",class:"footer__top__help__list__child__link"}
+              大型フリマ便
+          %li.footer__top__help__list__child
+            %a{href:"",class:"footer__top__help__list__child__link"}
+              車体取引ガイド
+          %li.footer__top__help__list__child
+            %a{href:"",class:"footer__top__help__list__child__link"}
+              フリマあんしん・あんぜん宣言！
+          %li.footer__top__help__list__child
+            %a{href:"",class:"footer__top__help__list__child__link"}
+              偽ブランド品撲滅の取り組み
+          %li.footer__top__help__list__child
+            %a{href:"",class:"footer__top__help__list__child__link"}
+              フリマボックス
+      .footer__top__privacy
+        %h2.footer__top__privacy__text プライバシーと利用規約
+        .footer__top__privacy__list
+          %ul.footer__top__privacy__list__left
+            %li.footer__top__privacy__list__left__child
+              %a{href:"",class:"footer__top__privacy__list__left__child__link"}
+                プライバシーポリシー
+            %li.footer__top__privacy__list__left__child
+              %a{href:"",class:"footer__top__privacy__list__left__child__link"}
+                メルカリ利用規約
+            %li.footer__top__privacy__list__left__child
+              %a{href:"",class:"footer__top__privacy__list__left__child__link"}
+                あんしんスマホサポート制度に関する利用規約
+            %li.footer__top__privacy__list__left__child
+              %a{href:"",class:"footer__top__privacy__list__left__child__link"}
+                コンプライアンスポリシー
+          %ul.footer__top__privacy__list__right
+            %li.footer__top__privacy__list__right__child
+              %a{href:"",class:"footer__top__privacy__list__right__child__link"}
+                個人データの安全管理に係る基本方針
+            %li.footer__top__privacy__list__right__child
+              %a{href:"",class:"footer__top__privacy__list__right__child__link"}
+                特定商取引に関する表記
+            %li.footer__top__privacy__list__right__child
+              %a{href:"",class:"footer__top__privacy__list__right__child__link"}
+                資金決済法に基づく表示
+            %li.footer__top__privacy__list__right__child
+              %a{href:"",class:"footer__top__privacy__list__right__child__link"}
+                法令遵守と犯罪抑止のために
+      .footer__top__country
+        %h2.footer__top__country__text 国
+        %ul.footer__top__country__list
+          %li.footer__top__country__list__child
+            %a{href:"",class:"footer__top__country__list__child__link"}
+              日本
+          %li.footer__top__country__list__child
+            %a{href:"",class:"footer__top__country__list__child__link"}
+              United States
+
+    .footer__bottom
+      %a{href:"#",size:"124x31",class:"footer__bottom__a"}
+        = image_tag "https://pro.foto.ne.jp/free/product_info.php/cPath/21_50_115/products_id/2100",size:"124x31",class:"footer__bottom__a__image"
+      %span.footer__bottom__text @ freemarket,inc.
