--- a/app/views/products/_footer.html.haml
+++ b/app/views/products/_footer.html.haml
@@ -4,91 +4,67 @@
       %h2.footer__top__about__text フリマについて
       %ul.footer__top__about__list
         %li.footer__top__about__list__child
-          %a{href:"",class:"footer__top__about__list__child__link"}
-            会社概要
+          = link_to "会社概要", root_path, class:"footer__top__about__list__child__link"
         %li.footer__top__about__list__child
-          %a{href:"",class:"footer__top__about__list__child__link"}
-            採用情報
+          = link_to "採用情報", root_path, class:"footer__top__about__list__child__link"
         %li.footer__top__about__list__child
-          %a{href:"",class:"footer__top__about__list__child__link"}
-            プレスリリース
+          = link_to "プレリリース", root_path, class:"footer__top__about__list__child__link"
         %li.footer__top__about__list__child
-          %a{href:"",class:"footer__top__about__list__child__link"}
-            公式ブログ
+          = link_to "公式ブログ", root_path, class:"footer__top__about__list__child__link"
         %li.footer__top__about__list__child
-          %a{href:"",class:"footer__top__about__list__child__link"}
-            フリマロゴ利用ガイドライン
-        %a{href:"",class:"footer__top__about__list__icon"}
+          = link_to "フリマロゴ利用ガイドライン", root_path, class:"footer__top__about__list__child__link"
+        = link_to root_path, class:"footer__top__about__list__icon" do
           %i.fab.fa-twitter
-        %a{href:"",class:"footer__top__about__list__icon"}
+        = link_to root_path, class:"footer__top__about__list__icon" do
           %i.fab.fa-facebook-square
     .footer__top__help
       %h2.footer__top__help__text ヘルプ＆ガイド
       %ul.footer__top__help__list
         %li.footer__top__help__list__child
-          %a{href:"",class:"footer__top__help__list__child__link"}
-            フリマガイド
+          = link_to "フリマガイド", root_path, class:"footer__top__help__list__child__link"
         %li.footer__top__help__list__child
-          %a{href:"",class:"footer__top__help__list__child__link"}
-            らくらくフリマ便
+          = link_to "らくらくフリマ便", root_path, class:"footer__top__help__list__child__link"
         %li.footer__top__help__list__child
-          %a{href:"",class:"footer__top__help__list__child__link"}
-            ゆうゆうフリマ便
+          = link_to "ゆうゆうフリマ便", root_path, class:"footer__top__help__list__child__link"
         %li.footer__top__help__list__child
-          %a{href:"",class:"footer__top__help__list__child__link"}
-            大型フリマ便
+          = link_to "大型フリマ便", root_path, class:"footer__top__help__list__child__link"
         %li.footer__top__help__list__child
-          %a{href:"",class:"footer__top__help__list__child__link"}
-            車体取引ガイド
+          = link_to "車体取引ガイド", root_path, class:"footer__top__help__list__child__link"
         %li.footer__top__help__list__child
-          %a{href:"",class:"footer__top__help__list__child__link"}
-            フリマあんしん・あんぜん宣言！
+          = link_to "フリマあんしん・あんぜん宣言！", root_path, class:"footer__top__help__list__child__link"
         %li.footer__top__help__list__child
-          %a{href:"",class:"footer__top__help__list__child__link"}
-            偽ブランド品撲滅の取り組み
+          = link_to "偽ブランド品撲滅の取り組み", root_path, class:"footer__top__help__list__child__link"
         %li.footer__top__help__list__child
-          %a{href:"",class:"footer__top__help__list__child__link"}
-            フリマボックス
+          = link_to "フリマボックス", root_path, class:"footer__top__help__list__child__link"
     .footer__top__privacy
       %h2.footer__top__privacy__text プライバシーと利用規約
       .footer__top__privacy__list
         %ul.footer__top__privacy__list__left
           %li.footer__top__privacy__list__left__child
-            %a{href:"",class:"footer__top__privacy__list__left__child__link"}
-              プライバシーポリシー
+            = link_to "プライバシーポリシー", root_path, class:"footer__top__privacy__list__left__child__link"
           %li.footer__top__privacy__list__left__child
-            %a{href:"",class:"footer__top__privacy__list__left__child__link"}
-              メルカリ利用規約
+            = link_to "フリマ利用規約", root_path, class:"footer__top__privacy__list__left__child__link"
           %li.footer__top__privacy__list__left__child
-            %a{href:"",class:"footer__top__privacy__list__left__child__link"}
-              あんしんスマホサポート制度に関する利用規約
+            = link_to "あんしんスマホサポート制度に関する利用規約", root_path, class:"footer__top__privacy__list__left__child__link"
           %li.footer__top__privacy__list__left__child
-            %a{href:"",class:"footer__top__privacy__list__left__child__link"}
-              コンプライアンスポリシー
+            = link_to "コンプライアンスポリシー", root_path, class:"footer__top__privacy__list__left__child__link"
         %ul.footer__top__privacy__list__right
           %li.footer__top__privacy__list__right__child
-            %a{href:"",class:"footer__top__privacy__list__right__child__link"}
-              個人データの安全管理に係る基本方針
+            = link_to "個人データの安全管理に係る基本方針", root_path, class:"footer__top__privacy__list__right__child__link"
           %li.footer__top__privacy__list__right__child
-            %a{href:"",class:"footer__top__privacy__list__right__child__link"}
-              特定商取引に関する表記
+            = link_to "特定商取引に関する表記", root_path, class:"footer__top__privacy__list__right__child__link"
           %li.footer__top__privacy__list__right__child
-            %a{href:"",class:"footer__top__privacy__list__right__child__link"}
-              資金決済法に基づく表示
+            = link_to "資金決済法に基づく表示", root_path, class:"footer__top__privacy__list__right__child__link"
           %li.footer__top__privacy__list__right__child
-            %a{href:"",class:"footer__top__privacy__list__right__child__link"}
-              法令遵守と犯罪抑止のために
+            = link_to "法令遵守と犯罪抑止のために", root_path, class:"footer__top__privacy__list__right__child__link"
     .footer__top__country
       %h2.footer__top__country__text 国
       %ul.footer__top__country__list
         %li.footer__top__country__list__child
-          %a{href:"",class:"footer__top__country__list__child__link"}
-            日本
+          = link_to "日本", root_path, class:"footer__top__country__list__child__link"
         %li.footer__top__country__list__child
-          %a{href:"",class:"footer__top__country__list__child__link"}
-            United States
-
+          = link_to "United States", root_path, class:"footer__top__country__list__child__link"
   .footer__bottom
-    %a{href:"#",size:"124x31",class:"footer__bottom__a"}
+    = link_to root_path, class:"footer__bottom__a" do
       = image_tag "fmarket_logo_white.svg",size:"124x31",class:"footer__bottom__a__image"
     %span.footer__bottom__text @ freemarket,inc.
