setting_product_application

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,9 +5,10 @@
 @import "footer";
 @import "header";
 @import "index";
+@import "new";
 @import "banner";
 @import "show";
-@import "my_page";
+@import "user_mypage";
 @import "guide";
 @import "notice";
 @import "things_to_do";
