--- a/app/views/products/user_page.html.haml
+++ b/app/views/products/user_page.html.haml
@@ -2,6 +2,10 @@
 
 = render 'header'  # 全体のヘッダーの部分テンプレートの呼び出し
 
+= render 'user_header'  # ユーザマイページのヘッダー部分テンプレートの呼び出し
+
+= render 'user_sidebar'  # ユーザマイページのヘッダーの部分テンプレートの呼び出し
+
 .content__mypage-user
   .content__mypage-user__icon
     = link_to "" 
