setting__buy_confirm

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,5 +20,6 @@
 @import "news";
 @import "evaluation";
 @import "contact";
+@import "buy_confirm";
 @import "font-awesome-sprockets";
 @import "font-awesome";
