setting__buy_confirm__file

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,7 +8,7 @@
 @import "new";
 @import "banner";
 @import "show";
-@import "user_mypage";
+@import "buy_confirm";
 @import "guide";
 @import "notice";
 @import "things_to_do";
