--- a/app/assets/stylesheets/buy_confirm.scss
+++ b/app/assets/stylesheets/buy_confirm.scss
@@ -6,5 +6,124 @@
     height: 722px;
     margin: 0 auto;
     background-color: #fff;
+    &__title{
+      font-size: 22px;
+      padding: 32px;
+      line-height: 1.5;
+      text-align: center;
+    }
+    &__image{
+      text-align: center;
+      padding: 32px 16px;
+      border-top: 1px solid #f5f5f5 ;
+      &__box{
+        max-width: 343px;
+        margin: 0 auto;
+        &__gazo{
+          display: flex;
+          &__file{
+            height: 80px;
+            width: 80px;
+            min-width: 80px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            &__product{
+              max-height: 80px;
+              width: 80px;
+            }
+          }
+          &__item{
+            margin-left: 16px;
+            &__name{
+              font-size: 14px;
+              padding: 0 0 8px;
+              line-height: 1.5;
+              text-align: left;
+            }
+            &__price{
+              text-align: left;
+              font-size: 15px;
+              font-weight: 600;
+              &__send{
+                font-size: 12px;
+              }
+            }
+          }
+        }
+        &__form{
+          &__table{
+            display: table;
+            border-collapse: collapse;
+            width: 100%;
+            line-height: 1;
+            &__money{
+              font-size: 30px;
+              font-weight: 600;
+              display: table-row;
+              &__text{
+                font-size: 16px;
+                text-align: left;
+                display: table-cell;
+                padding: 0;
+                color: #333;
+              }
+              &__price{
+                display: table-cell;
+                padding: 0;
+                text-align: right;
+                color: #333;
+              }
+            }
+          }
+          &__point{
+            color: #888;
+            margin: 24px 0 32px;
+            &__have{
+              &__box{
+                text-align: left;
+                position: relative;
+                input[type=checkbox]{
+                  display: none;
+                }
+                &__icon{
+                  position: absolute;
+                  color: #ccc;
+                  background-color: #ccc;
+                  top:50%;
+                  left: 0;
+                  z-index: 1;
+                  width: 20px;
+                  height: 20px;
+                  border-radius: 2px;
+                  border: 1px solid #ccc;
+                  font-size: 10px;
+                  line-height: 17px;
+                  text-align: center;
+                  vertical-align: middle;
+                  transition: all ease-out .3s;
+                  transform: translate(0, -50%);
+                  padding-top: 2px;
+                  display: inline-block;
+                }
+                &__text {
+                  position: relative;
+                  z-index: 2;
+                  padding: 0 0 0 28px;
+                  font-size: 14px;
+                  font-weight: 400;
+                  vertical-align: middle;
+                  display: inline-block;
+                  text-align: left;
+                }
+              }
+            }
+          }
+          &__pattern{
+            
+          }
+        }
+      }
+    }
   }
 }
