setting__buy_confirm_icon

--- a/app/views/products/buy_confirm.html.haml
+++ b/app/views/products/buy_confirm.html.haml
@@ -32,18 +32,18 @@
                     
             .confirm__main__image__box__form__pattern
               .confirm__main__image__box__form__pattern__text
-                %h3 お支払い方法
+                %h3#pattern_text お支払い方法
                 = link_to "",id:"link" do
                   %p.confirm__main__image__box__form__pattern__text__link
-                    %i.icon-plus-circle
+                    %i.fa.fa-plus-circle
                     %span.confirm__main__image__box__form__pattern__text__link__message 登録してください
             
             .confirm__main__image__box__form__pattern
               .confirm__main__image__box__form__pattern__text
-                %h3 配送先
+                %h3#pattern_text 配送先
                 = link_to "",id:"link" do
                   %p.confirm__main__image__box__form__pattern__text__link
-                    %i.icon-plus-circle
+                    %i.fa.fa-plus-circle
                     %span.confirm__main__image__box__form__pattern__text__link__message 登録してください
 
             .confirm__main__image__box__form__pattern
