--- a/app/assets/stylesheets/buy_confirm.scss
+++ b/app/assets/stylesheets/buy_confirm.scss
@@ -120,7 +120,21 @@
             }
           }
           &__pattern{
-            
+            padding: 32px 0;
+            transition: all ease-out .3s;
+            text-align: left;
+            border-top: 1px solid #f5f5f5;
+            color: #333;
+            &__text{
+              #pattern_text{
+                font-size: 14px;
+              }
+              &__link{
+                color: #0099e8;
+                text-decoration: none;
+                touch-action: manipulation;
+              }
+            }
           }
         }
       }
