--- a/app/views/products/user_page.html.haml
+++ b/app/views/products/user_page.html.haml
@@ -1,57 +1,79 @@
 -# ユーザマイページの右の部分 メルカリ>マイページ
 
 = render 'header'  # 全体のヘッダーの部分テンプレートの呼び出し
-
-= render 'user_header'  # ユーザマイページのヘッダー部分テンプレートの呼び出し
-
-= render 'user_sidebar'  # ユーザマイページのヘッダーの部分テンプレートの呼び出し
-
-.content__mypage-user
-  .content__mypage-user__icon
-    = link_to "" 
-    .content__mypage-user__icon__figures
-      = link_to image_tag"https://static.mercdn.net/images/member_photo_noimage_thumb.png", class: "content__mypage-user__icon__figure"
-    .content__mypage-user__icon__name
-      人間
-    .content__mypage-user__icon-numbers
-      .content__mypage-user__icon__numbers__number
-        評価
-        .content__mypage-user__icon__numbers__number__count
-          0
-      .content__mypage-user__icon__numbers__number
-        出品数
-        .content__mypage-user__icon__numbers__number__count
-          0
-.content__mypage-todos
-  .content__mypage-todos__tabs
-    .content__mypage-todos__tabs__news
-      = link_to ""
-      お知らせ
-    .content__mypage-todos__tabs__todo
-      = link_to ""
-      やることリスト
-  .content__mypage-todos__list
-    .content__mypage-todos__list__link
-    = link_to ""
-    .content__mypage-todos__list__icon
-    = image_tag "logo_red.svg", class: "content__mypage-todos__list__figure"
-    .content__mypage-todos__list__body
-      = link_to ""
-      .content__mypage-todos__list__body__text
-        <<新規登録者限定>>"最大1,000円分のポイントがもらえる"出品キャンペーン開催中！
-      .content__mypage-todos__list__body__time-icon
-        = icon 'far', 'clock'
-      .content__mypage-todos__list__body__time
-        1日前
-    .content__mypage-todos__list__body__angle-icon
-      = icon 'fas', 'angle-right', class: "content__mypage-todos__list__body__angle"
-  .content__mypage-todos__go
-    .content__mypage-todos__go__list
-      = link_to ""
-      一覧を見る
-      .u-products
-
-= render 'purchased_goods' # 全体の購入した商品の部分テンプレートの呼び出し
+.u-main
+  = render 'user_header'  # ユーザマイページのヘッダー部分テンプレートの呼び出し
+  .u-container
+    .container-center
+      = render 'user_sidebar'  # ユーザマイページのヘッダーの部分テンプレートの呼び出し
+      .contents
+        .contents__user
+          .contents__user__icon
+            = link_to "" 
+            .contents__user__icon__figures
+              = link_to image_tag"https://static.mercdn.net/images/member_photo_noimage_thumb.png", class: "contents__user__icon__figure"
+            .contents__user__icon__name
+              人間
+            .contents__user__icon-numbers
+              .contents__user__icon__numbers__number
+                評価
+                .contents__user__icon__numbers__number__count
+                  0
+              .contents__user__icon__numbers__number
+                出品数
+                .contents__user__icon__numbers__number__count
+                  0
+        .contents__tabs
+          %input#news{checked: "checked", name: "tab_item", type: "radio"}
+          %label.contents__tabs__tab_item{for: "news"}
+            お知らせ
+          %input#todo{name: "tab_item", type: "radio"}
+          %label.contents__tabs__tab_item{for: "todo"}
+            やることリスト
+          #news_main.contents__tabs__tab_mains
+            .contents__tabs__tab_mains__main
+              = image_tag "logo_red.svg", class: "contents__tabs__tab_mains__main__figure"
+              .contents__tabs__tab_mains__main__body
+                = link_to ""
+                .contents__tabs__tab_mains__main__body__text
+                  <<新規登録者限定>>"最大1,000円分のポイントがもらえる"出品キャンペーン開催中！
+                .contents__tabs__tab_mains__main__body__time-icon
+                  = icon 'far', 'clock'
+                .contents__tabs__tab_mains__main__body__time
+                  1日前
+                = icon 'fas', 'angle-right', class: "contents__tabs__tab_mains__main__body__angle"
+            .contents__tabs__tab_mains__button
+              .contents__tabs__tab_mains__button__go
+                .contents__tabs__tab_mains__button__go__list
+                  = link_to ""
+                  一覧を見る
+          #todo_box.contents__tabs__tab_mains
+            .contents__tabs__tab_mains__box
+              .contents__tabs__tab_mains__box__bottom
+                = image_tag "logo_gray.svg", class: "contents__tabs__tab_mains__box__bottom--img"
+                .contents__tabs__tab_mains__box__bottom--text
+                  現在、やることリストはありません
+        .contents__top
+          購入した商品
+        .contents__trading
+          %input#now-trading{checked: "checked", name: "tab_item2", type: "radio"}
+          %label.contents__trading__tab_item2{for: "now-trading"}
+            取引中
+          %input#past-trading{name: "tab_item2", type: "radio"}
+          %label.contents__trading__tab_item2{for: "past-trading"}
+            過去の取引
+          #now-trading_main.contents__trading__tab_mains
+            .contents__trading__tab_mains__main
+              .contents__trading__tab_mains__main__bottom
+                = image_tag "logo_gray.svg", class: "contents__trading__tab_mains__main__bottom--img"
+                .contents__trading__tab_mains__main__bottom--text
+                  取引中の商品がありません
+          #past-trading_box.contents__trading__tab_mains
+            .contents__trading__tab_mains__box
+              .contents__trading__tab_mains__box__bottom
+                = image_tag "logo_gray.svg", class: "contents__trading__tab_mains__box__bottom--img"
+                .contents__trading__tab_mains__box__bottom--text
+                  過去に取引した商品がありません
 
 = render 'banner'  # 全体のバナーの部分テンプレートの呼び出し
 
