setting_buy_confirm

--- a/app/views/products/buy_confirm.html.haml
+++ b/app/views/products/buy_confirm.html.haml
@@ -47,8 +47,7 @@
                     %span.confirm__main__image__box__form__pattern__text__link__message 登録してください
 
             .confirm__main__image__box__form__pattern
-              %button.confirm__main__image__box__form__pattern__button{type: "button"}
-                =submit_tag "購入する"
+              %button.confirm__main__image__box__form__pattern__button{type: "submit"} 購入する
               %input.confirm__main__image__box__form__pattern__hidden{type: "hidden"}
 
 
