--- a/app/assets/stylesheets/buy_confirm.scss
+++ b/app/assets/stylesheets/buy_confirm.scss
@@ -11,11 +11,13 @@
       padding: 32px;
       line-height: 1.5;
       text-align: center;
+      @include font__title;
     }
     &__image{
       text-align: center;
       padding: 32px 16px;
       border-top: 1px solid #f5f5f5 ;
+      font-family: "Source Sans Pro", Helvetica, Arial, 游ゴシック体, YuGothic, メイリオ, Meiryo, sans-serif;
       &__box{
         max-width: 343px;
         margin: 0 auto;
@@ -36,7 +38,7 @@
           &__item{
             margin-left: 16px;
             &__name{
-              font-size: 14px;
+              @include font14__weight400;
               padding: 0 0 8px;
               line-height: 1.5;
               text-align: left;
@@ -45,6 +47,7 @@
               text-align: left;
               font-size: 15px;
               font-weight: 600;
+              color: #333;
               &__send{
                 font-size: 12px;
               }
@@ -62,7 +65,7 @@
               font-weight: 600;
               display: table-row;
               &__text{
-                font-size: 16px;
+                font-size: 18px;
                 text-align: left;
                 display: table-cell;
                 padding: 0;
@@ -127,13 +130,39 @@
             color: #333;
             &__text{
               #pattern_text{
-                font-size: 14px;
+                @include font14;
+                height: 14px;
+
               }
               &__link{
-                color: #0099e8;
-                text-decoration: none;
                 touch-action: manipulation;
+                margin: 8px 0 0;
+                @include important;
+                
+                &__message{
+                  margin: 0 0 0 4px;
+                  &:hover{
+                    @include important_hover;
+                    
+                  }
+                }
               }
+            }
+            &__button{
+              width: 100%;
+              display: block;
+              line-height: 48px;
+              font-size: 14px;
+              text-align: center;
+              transition: all ease-out .3s;
+              color: #fff;
+              background: #888;
+              border: 1px solid #888;
+              font-weight: 600;
+              min-height: 1.5em;
+            }
+            &__hidden{
+              touch-action: manipulation;
             }
           }
         }
