setting_wizard_routing_controller_view

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,3 +25,11 @@
 @import "font-awesome";
 @import "user_mypage";
 @import "user_page";
+@import "./new_user.css";
+@import "./new_cellphone.css";
+@import "./new_address.css";
+@import "./new_credit_card.css";
+@import "./create.css";
+@import "./create_address.css";
+@import "./create_credit_card.css";
+@import "./create_credit_card.css";
