setting_mypage_view

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,6 +25,7 @@
 @import "font-awesome";
 @import "user_mypage";
 @import "user_page";
+@import "camera_icon";
 @import "./new_user.css";
 @import "./new_cellphone.css";
 @import "./new_address.css";
