--- a/app/views/products/user_page.html.haml
+++ b/app/views/products/user_page.html.haml
@@ -78,3 +78,5 @@
 = render 'banner'  # 全体のバナーの部分テンプレートの呼び出し
 
 = render 'footer'  # 全体のフッターの部分テンプレートの呼び出し
+
+= render 'camera_icon'  # 右下に出るカメラアイコンの部分テンプレートの呼び出し
