--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -34,3 +34,5 @@
 @import "./create_address.css";
 @import "./create_credit_card.css";
 @import "./create_credit_card.css";
+@import "user_profile_edit";
+@import "user_logout";
