--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,13 +26,13 @@
 @import "user_mypage";
 @import "user_page";
 @import "camera_icon";
-@import "./new_user.css";
-@import "./new_cellphone.css";
-@import "./new_address.css";
-@import "./new_credit_card.css";
-@import "./create.css";
-@import "./create_address.css";
-@import "./create_credit_card.css";
-@import "./create_credit_card.css";
+@import "new_user";
+@import "new_cellphone";
+@import "new_address";
+@import "new_credit_card";
+@import "create";
+@import "create_address";
+@import "create_credit_card";
+@import "create_credit_card";
 @import "user_profile_edit";
 @import "user_logout";
