setting_create_file

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -36,3 +36,5 @@
 @import "create_credit_card";
 @import "user_profile_edit";
 @import "user_logout";
+@import "user_credit";
+@import "user_profile_information";
